// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`badge > renders correctly prominence default 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jye styles_sentiment_neutral__1yf71jyb styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly prominence strong 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_strong__1yf71jyf styles_sentiment_neutral__1yf71jyb styles_undefined_compound_13__1yf71jyu style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment danger 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jye styles_sentiment_danger__1yf71jy7 styles_undefined_compound_2__1yf71jyj style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment info 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jye styles_sentiment_info__1yf71jy8 styles_undefined_compound_3__1yf71jyk style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jye styles_sentiment_neutral__1yf71jyb styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jye styles_sentiment_primary__1yf71jy5 styles_undefined_compound_0__1yf71jyh style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment secondary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jye styles_sentiment_secondary__1yf71jy6 styles_undefined_compound_1__1yf71jyi style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jye styles_sentiment_success__1yf71jy9 styles_undefined_compound_4__1yf71jyl style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly sentiment warning 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jye styles_sentiment_warning__1yf71jya styles_undefined_compound_5__1yf71jym style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_large__1yf71jy3 styles_prominence_default__1yf71jye styles_sentiment_neutral__1yf71jyb styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jye styles_sentiment_neutral__1yf71jyb styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_small__1yf71jy1 styles_prominence_default__1yf71jye styles_sentiment_neutral__1yf71jyb styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_captionSmall__m4c9owt style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly size xsmall 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_xsmall__1yf71jy4 styles_prominence_default__1yf71jye styles_sentiment_neutral__1yf71jyb styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_captionSmall__m4c9owt style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly when disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jye styles_sentiment_neutral__1yf71jyb styles_disabled_true__1yf71jyg style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_75__m4c9ow3f"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jye styles_sentiment_neutral__1yf71jyb styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`badge > renders correctly with icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <span
      class="styles__1yf71jy0 styles_size_medium__1yf71jy2 styles_prominence_default__1yf71jye styles_sentiment_neutral__1yf71jyb styles_undefined_compound_6__1yf71jyn style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
      style="--qabug41: nowrap;"
    >
      <svg
        class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M8 2.3125C4.85888 2.3125 2.3125 4.85888 2.3125 8C2.3125 11.1411 4.85888 13.6875 8 13.6875C11.1411 13.6875 13.6875 11.1411 13.6875 8C13.6875 4.85888 11.1411 2.3125 8 2.3125ZM1 8C1 4.13401 4.13401 1 8 1C11.866 1 15 4.13401 15 8C15 11.866 11.866 15 8 15C4.13401 15 1 11.866 1 8ZM7.34375 5.35677C7.34375 4.99433 7.63756 4.70052 8 4.70052H8.00529C8.36772 4.70052 8.66154 4.99433 8.66154 5.35677V5.36206C8.66154 5.72449 8.36772 6.01831 8.00529 6.01831H8C7.63756 6.01831 7.34375 5.72449 7.34375 5.36206V5.35677ZM7.55734 8.12213C7.28751 8.1578 7.01294 8.02195 6.88439 7.76484C6.7223 7.44066 6.8537 7.04647 7.17787 6.88439L7.20711 6.86976C8.11256 6.41704 9.13206 7.23485 8.88653 8.21695L8.44266 9.99246C8.71249 9.95679 8.98705 10.0926 9.11561 10.3497C9.2777 10.6739 9.14631 11.0681 8.82214 11.2302L8.79289 11.2448L8.79289 11.2448C7.88744 11.6975 6.86794 10.8797 7.11347 9.89764L7.55734 8.12213Z"
          fill-rule="evenodd"
        />
      </svg>
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;
